--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,46 @@
 
-body{
+#homepageBody{
+    position: static;
     background-color: blanchedalmond;
-    background-image: url(../image/back.jpg);
+    background-image: url(../image/hello.jpg);
     background-size: 100%;
+    motion-offset: 0%;
 }
 
-#letter {
+#strawberry{
+    position: static;
+    justify-content: center;
+    margin-left: 25vw;
+    margin-top: 2vw;
+    align-items: center;
+    background-size: 100%;
+    height: 50vw; 
+    width: 50vw;
 }
+#clickme{
+    position: static;
+    margin-right: 75%;
+    height: 8%;
+    width: 8%;
+}
+h1{
+    color: black;
+}
+
+
+h2{
+    color: rgb(39, 183, 232);
+    filter: blur(5px);
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+}
+h2:hover{
+    color: black;
+    font: italic;
+    filter: contrast(200%)
+
+
+}
+    
+
+
 
